# docs/swagger.json
@@ -3500,6 +3500,10 @@
                     "description": "LongTaskID holds the value of the \"long_task_id\" field.",
                     "type": "integer"
                 },
+                "progress_raw": {
+                    "description": "ProgressRaw holds the value of the \"progress_raw\" field.",
+                    "type": "string"
+                },
                 "progress_to_add": {
                     "description": "ProgressToAdd holds the value of the \"progress_to_add\" field.",
                     "type": "number"
@@ -3724,6 +3728,9 @@
             "type": "object",
             "properties": {
                 "comments": {
+                    "type": "string"
+                },
+                "progressRaw": {
                     "type": "string"
                 },
                 "progressToAdd": {
